<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5sp">
    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/txttipodesc"
        android:textAlignment="center"
        android:layout_weight="2"
        android:textSize="9sp" />

    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/txtmarcamodelo"
        android:layout_weight="4"
        android:textAlignment="center"
        android:textSize="9sp" />
    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/txtvalor"
        android:textAlignment="center"
        android:layout_weight="4"
        android:textSize="9sp" />


</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5sp">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="53dp"
        android:layout_weight="2"
        android:id="@+id/img_tipo"
        android:icon="@drawable/caminhao" />

    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="GM/corsa"
        android:textAlignment="center"
        android:id="@+id/txt_marcamodelo"
        android:layout_weight="4"
        android:textSize="16sp" />
    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="Valor"
        android:textAlignment="center"
        android:id="@+id/txt_valor"
        android:layout_weight="4"
        android:textSize="16sp" />
</LinearLayout>

</LinearLayout>